--- a/Memory.csproj
+++ b/Memory.csproj
@@ -119,6 +119,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ui\assets\" />
+    <Folder Include="ui\assets\themes\default" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
