Added escape menu page files

--- a/Memory.csproj
+++ b/Memory.csproj
@@ -54,32 +54,36 @@
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
+        <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="card\Card.cs" />
-    <Compile Include="ui\MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ui\pages\GamePage.xaml.cs">
-      <DependentUpon>GamePage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="ui\pages\MainPage.xaml.cs">
-      <DependentUpon>MainPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="ui\pages\ScoreboardPage.xaml.cs">
-      <DependentUpon>ScoreboardPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="ui\pages\SettingsPage.xaml.cs">
+      <Compile Include="card\Card.cs"/>
+      <Compile Include="ui\MainWindow.xaml.cs">
+          <DependentUpon>MainWindow.xaml</DependentUpon>
+      </Compile>
+      <Compile Include="App.xaml.cs">
+          <DependentUpon>App.xaml</DependentUpon>
+          <SubType>Code</SubType>
+      </Compile>
+      <Compile Include="ui\pages\EscapeMenuPage.xaml.cs">
+          <DependentUpon>EscapeMenuPage.xaml</DependentUpon>
+      </Compile>
+      <Compile Include="ui\pages\GamePage.xaml.cs">
+          <DependentUpon>GamePage.xaml</DependentUpon>
+      </Compile>
+      <Compile Include="ui\pages\MainPage.xaml.cs">
+          <DependentUpon>MainPage.xaml</DependentUpon>
+      </Compile>
+      <Compile Include="ui\pages\ScoreboardPage.xaml.cs">
+          <DependentUpon>ScoreboardPage.xaml</DependentUpon>
+      </Compile>
+      <Compile Include="ui\pages\SettingsPage.xaml.cs">
       <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
     <Page Include="ui\MainWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+      <Page Include="ui\pages\EscapeMenuPage.xaml"/>
     <Page Include="ui\pages\GamePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
