--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -38,6 +38,14 @@
             <Private>True</Private>
         </Reference>
         <Reference Include="mscorlib"/>
+        <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
+            <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+            <Private>True</Private>
+        </Reference>
+        <Reference Include="SocketIOClient.NetFx, Version=2.0.2.9, Culture=neutral, PublicKeyToken=ce453294e4652142">
+            <HintPath>..\packages\SocketIOClient.NetFx.2.0.2.9\lib\net45\SocketIOClient.NetFx.dll</HintPath>
+            <Private>True</Private>
+        </Reference>
         <Reference Include="SQLitePCLRaw.batteries_v2, Version=2.0.2.669, Culture=neutral, PublicKeyToken=8226ea5df37bcae9">
             <HintPath>..\packages\SQLitePCLRaw.bundle_e_sqlite3.2.0.2\lib\net461\SQLitePCLRaw.batteries_v2.dll</HintPath>
             <Private>True</Private>
@@ -77,6 +85,10 @@
         <Reference Include="System.Xml"/>
         <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb">
             <HintPath>..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
+        </Reference>
+        <Reference Include="websocket-sharp, Version=1.0.4.0, Culture=neutral, PublicKeyToken=5660b08a1845a91e">
+            <HintPath>..\packages\WebSocketSharpFork.1.0.4.0\lib\net35\websocket-sharp.dll</HintPath>
+            <Private>True</Private>
         </Reference>
     </ItemGroup>
     <ItemGroup>
