--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -3,12 +3,15 @@
   <package id="Microsoft.Data.Sqlite" version="3.1.9" targetFramework="net48"/>
   <package id="Microsoft.Data.Sqlite.Core" version="3.1.9" targetFramework="net48"/>
   <package id="NUnit" version="3.5.0" targetFramework="net45"/>
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48"/>
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.2" targetFramework="net48"/>
   <package id="SQLitePCLRaw.core" version="2.0.2" targetFramework="net48"/>
   <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.2" targetFramework="net48"/>
   <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.0.2" targetFramework="net48"/>
+  <package id="SocketIOClient.NetFx" version="2.0.2.9" targetFramework="net48"/>
   <package id="System.Buffers" version="4.4.0" targetFramework="net48"/>
   <package id="System.Memory" version="4.5.3" targetFramework="net48"/>
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net48"/>
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net48"/>
+  <package id="WebSocketSharpFork" version="1.0.4.0" targetFramework="net48"/>
 </packages>
